--- a/Sc2MmrReader/Sc2MmrReader.csproj
+++ b/Sc2MmrReader/Sc2MmrReader.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MmrReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReaderConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
