--- a/Sc2MmrReader/Sc2MmrReader.csproj
+++ b/Sc2MmrReader/Sc2MmrReader.csproj
@@ -50,5 +50,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReaderConfig.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Config.json.example">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="README.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
