Issue2: Added a walkthrough for creating a config file using a battlenet URL instead of manually extracting each parameter.

--- a/Sc2MmrReader/Sc2MmrReader.csproj
+++ b/Sc2MmrReader/Sc2MmrReader.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application.cs" />
+    <Compile Include="ConfigFileManager.cs" />
     <Compile Include="MmrReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -52,12 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Config.json.example">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="LICENSE">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="README.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
